# SeisPolPy

./: .gitignore  LICENSE.md  README.md  README.rst  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml
SeisPolPy/: Flinn.py  Pinnegar.py  RSTFR.py  Rstfr.py  Vidale.py  __init__.py  seisPolPyfunctions.py
SeisPolPy/tests/: ACRG.mat  test_flinn.py  test_pinnegar.py  test_rstft.py  test_vidale.py
docs/: requirements.txt
examples/: ACRG.mat  Rstfr2.py  dataACRG.mat  dataII.ABKT.mat  dataII.ABKTtestspstft.mat  dataII.ABKTtitan.mat  dataII.ABKTvm.mat  datatitanII.ABKT.mat  flinn_example.py  loopstft.c  loopstft.pyx  outputFlinnB64.txt  outputFlinnB64specfemTitan.txt  outputFlinnB64specfemVm.txt  outputPinnegarB64Majoracrg.txt  outputPinnegarB64MajorspecfemTitan.txt  outputPinnegarB64MajorspecfemVm.txt  outputPinnegarB64Majorvm.txt  outputPinnegarB64Minoracrg.txt  outputPinnegarB64MinorspecfemTitan.txt  outputPinnegarB64MinorspecfemVm.txt  outputPinnegarB64Minorvm.txt  outputRstfrB64_S_STFTMajor.txt  outputRstfrB64_S_STFTMinor.txt  outputRstfrB64_S_STFTextraction.txt  outputRstfrB64_S_STFTrejection.txt  outputRstfrB6STFTMajorspecfemVm.txt  outputRstfrB6STFTMinorspecfemVm.txt  outputVidaleB641.txt  outputVidaleB642.txt  outputVidaleB642specfemTitan.txt  pinnegar_example.py  printdata.py  rstfr_example.py  rstfr_s_stft_example.py  rstfr_stft_example.py  setup.py  stftsisty.c  stftsisty.pyx  stftsistz.c  (+2 more)
tests/: ACRG.mat  Flinn_test.py  Pinnegar_test.py  RSTFR_test.py  Vidale_test.py  flinn.py  flinn_example.py  test_module.py  test_seisPyfunctions.py
(+29 files in other folders)
