#!/usr/bin/env python3
[metadata]
name=SeisPolPy
version=0.0.1
description=A Python Library for the Processing of Seismic Time Series
long_description=file: READEME.rst, LICENSE.rst
keywords=python, c, computer-science, package, library, algorithms, cython, seismology, waves, methods, seismic, filtering, polarization, shared-library, python3 
license=The MIT License (MIT)
license_files= LICENSE.md
classifiers=
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
url=https://seispolpy.readthedocs.io/en/latest/
project_url=https://github.com/EduardoAlm/SeisPolPy
author=Eduardo Rodrigues de Almeida
author_email=eduardorodalm95@gmail.com
maintainer=Hamzeh Mohammadigheymasi & Paul Crocker
requires=numpy, scipy

[options]
zip_safe=False
include_package_data=True
#packages_dir= 
#    =SeisPolPy
packages=SeisPolPy, SeisPolPy.tests
install_requires=
    numpy==1.20.2
    scipy==1.6.2
    pytest==6.2.3
py_modules=Flinn,Vidale,Rstfr

#[tool:pytest]
#minversion = 6.0
#addopts = -ra -q
#testpaths =
#    tests

#[options.packages.find]
#where=src

#[options.package_data]
#* = *.rst

#[options.entry_points]
#console_scripts =
#    flinn = SeisPolPy.Flinn:flinn
#    vidale = SeisPolPy.Vidale:vidale
#    rstfr = SeisPolPy.Rstfr:rstfr

[options.data_files]
data = docs/source/img/logo_no_back.png, docs/source/img/icon.png
